[package]
name = "pallet-contracts"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet for WASM contracts"
readme = "README.md"

# Prevent publish until we are ready to release 3.0.0
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-sandbox = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-contracts-proc-macro = { git = "https://github.com/paritytech/substrate", branch = "master" }

parity-wasm = { version = "0.41.0", default-features = false }
pwasm-utils = { version = "0.16", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
wasmi-validation = { version = "0.3.0", default-features = false }

# Only used in benchmarking to generate random contract code
rand = { version = "0.7.0", optional = true, default-features = false }
rand_pcg = { version = "0.2.1", optional = true }

[dev-dependencies]
assert_matches = "1.3.0"
hex-literal = "0.3.1"
pallet-balances = { version = "2.0.0", path = "../balances" }
pallet-timestamp = { version = "2.0.0", path = "../timestamp" }
pallet-randomness-collective-flip = { version = "2.0.0", path = "../randomness-collective-flip" }
paste = "1.0"
pretty_assertions = "0.6.1"
wat = "1.0"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"sp-sandbox/std",
	"frame-support/std",
	"frame-system/std",
	"parity-wasm/std",
	"pwasm-utils/std",
	"wasmi-validation/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-proc-macro/full",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"rand",
	"rand_pcg",
]
