[package]
name = "pallet-contracts"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet for WASM contracts"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4", default-features = false }
parity-wasm = { version = "0.42", default-features = false }
# pwasm-utils = { version = "0.17", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
smallvec = { version = "1", default-features = false, features = ["const_generics"] }
wasmi-validation = { version = "0.4", default-features = false }

# Only used in benchmarking to generate random contract code
rand = { version = "0.8", optional = true, default-features = false }
rand_pcg = { version = "0.3", optional = true }

# Substrate Dependencies
frame-benchmarking = { version = "3.1.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-contracts-primitives = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-contracts-proc-macro = { version = "3.0.0", path = "proc-macro" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }

pwasm-utils = { git = "https://github.com/patractlabs/wasm-utils", branch = "v0.17.0" }
sp-sandbox = { package = "ep-sandbox", path = "../../../../primitives/sandbox", default-features = false }

# used in env_trace
environmental = { version = "1.1.2", default-features = false }
derivative = "2.1.1"
add_getters_setters = "1.1.2"
hex = "0.4.3"

[dev-dependencies]
assert_matches = "1"
hex-literal = "0.3"
paste = "1"
pretty_assertions = "0.7"
wat = "1"

# Substrate Dependencies
pallet-balances = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-timestamp = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-randomness-collective-flip = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"sp-sandbox/std",
	"frame-support/std",
	"frame-system/std",
	"parity-wasm/std",
	"pwasm-utils/std",
	"wasmi-validation/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-proc-macro/full",
	"log/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"rand",
	"rand_pcg",
	"unstable-interface",
]
try-runtime = ["frame-support/try-runtime"]
# Make contract callable functions marked as __unstable__ available. Do not enable
# on live chains as those are subject to change.
unstable-interface = []
